Reset gc option values to be 0, false or not used to indicate that they do not influence anything.